--- a/main.css
+++ b/main.css
@@ -22,3 +22,9 @@ body{
     background-color: goldenrod;
     box-shadow: 15px 15px 15px black;
 }
+
+.answer-container {
+    background: white;
+    height: 150px;
+    width: 150px;
+}
